# escootersim

./: .gitignore  README.md  package-lock.json  package.json
analysis/eda/: Data.md  README.md  combined.py  hello.py  pyproject.toml
analysis/eda/Data/: FlowMap.json  Optimal_path.csv  Optimal_path_expanded.csv  b64_map2.txt  qualtrics.csv
analysis/eda/Data/P1011/: CSV_Scenario-Nback_Button-temp_2024-08-09-12-22-15.csv  CSV_Scenario-Nback_Footbutton-temp_2024-08-09-12-38-04.csv  CSV_Scenario-Nback_Phone-temp_2024-08-09-12-14-24.csv  CSV_Scenario-Nback_Throttle-temp_2024-08-09-11-58-31.csv  CSV_Scenario-Nback_Voice-temp_2024-08-09-12-34-25.csv  CSV_Scenario-Nback_Watch-temp_2024-08-09-12-40-52.csv  CSV_Scenario-SCooterStudyenv_Session-temp_2024-08-09-11-54-39.csv  CSV_Scenario-Song_Button-temp_2024-08-09-12-02-39.csv  CSV_Scenario-Song_Button-temp_2024-08-09-12-25-15.csv  CSV_Scenario-Song_Footbutton-temp_2024-08-09-12-30-57.csv  CSV_Scenario-Song_Throttle-temp_2024-08-09-12-10-15.csv  CSV_Scenario-Song_Voice-temp_2024-08-09-12-06-22.csv  CSV_Scenario-Song_Watch-temp_2024-08-09-12-18-27.csv
analysis/eda/Data/P1026/: CSV_Scenario-Nback_Button_Session-temp_2024-08-14-13-35-09.csv  CSV_Scenario-Nback_Footbutton_Session-temp_2024-08-14-13-19-50.csv  CSV_Scenario-Nback_Phone_Session-temp_2024-08-14-13-05-21.csv  CSV_Scenario-Nback_Throttle_Session-temp_2024-08-14-13-51-46.csv  CSV_Scenario-Nback_Voice_Session-temp_2024-08-14-13-41-52.csv  (+8 more)
analysis/eda/src/: IMU.py  button_delta.py  combined.py  eda.py  example_participant.py  nasa_tlx_plot.ipynb  qualtrics.py  route.py
(+742 files in other folders)
