[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ilan mandel", email = "im334@cornell.edu" }
]
dependencies = [
    "polars>=1.4.1",
    "altair[all]>=5.3.0",
    "hvplot>=0.10.0",
    "scipy>=1.14.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "marimo>=0.7.17",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eda"]
